--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -6,27 +6,35 @@
     <title>@ViewData["Title"] - SkillCoacher</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/lib/_reboot.scss" />
 
 
     <!-- Custom styles for this template -->
     <link href="~/lib/dashboard.css" rel="stylesheet">
     <link href="~/lib/blog.css" rel="stylesheet">
 </head>
-<body>
+<body style="height: "height: 1000px">
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0" asp-area="" asp-page="/Index">SkillCoacher</a>
         <input class="form-control form-control-dark w-50" type="text" placeholder="Поиск по SkillCoacher" aria-label="Search">
         <ul class="navbar-nav px-3">
-            <li class="nav-item text-nowrap">
-                <a class="nav-link" href="#">Войти</a>
-                <a class="nav-link" asp-area="" asp-page="/SignUp">Регистрация</a>
-            </li>
+            <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Профиль
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Войти</a>
+                    <a class="dropdown-item" asp-area="" asp-page="/SignUp">Регистрация</a>
+                </div>
+            </div>
+            @*<li class="nav-item text-nowrap">
+            <a class="nav-link" href="#">Войти</a>
+            <a class="nav-link" asp-area="" asp-page="/SignUp">Регистрация</a>
+        </li>*@
         </ul>
     </nav>
 
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid" style="height: 1000px">
+        <div class="row" style="height: 1000px">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -56,7 +64,7 @@
                         </li>
                     </ul>
 
-                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    @*<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                         <span>Saved reports</span>
                         <a class="d-flex align-items-center text-muted" href="#">
                             <span data-feather="plus-circle"></span>
@@ -87,15 +95,20 @@
                                 Year-end sale
                             </a>
                         </li>
-                    </ul>
+                    </ul>*@
                 </div>
             </nav>
-            </div>
-            <div class="container">
-                <main role="main" class="pb-3">
+            <main role="main" class="pt-xl-5">
+                <div class="pl-xl-1">
                     @RenderBody()
-                </main>
-            </div>
+                </div>
+            </main>
+        </div>
+            <!--<div class="container">-->
+                @*<main role="main" class="pb-3">
+                    @RenderBody()
+                </main>*@
+            <!--</div>-->
         </div>
 </body>
 </html>
