--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link href="~/lib/dashboard.css" rel="stylesheet">
     <link href="~/lib/blog.css" rel="stylesheet">
 </head>
-<body style="height: "height: 1000px">
+<body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0" asp-area="" asp-page="/Index">SkillCoacher</a>
         <input class="form-control form-control-dark w-50" type="text" placeholder="Поиск по SkillCoacher" aria-label="Search">
@@ -29,15 +29,10 @@
                     <a class="dropdown-item" asp-area="" asp-page="/SignUp">Регистрация</a>
                 </div>
             </li>
-            @*<li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Войти</a>
-            <a class="nav-link" asp-area="" asp-page="/SignUp">Регистрация</a>
-        </li>lol*@
         </ul>
     </nav>
-
-    <div class="container-fluid" style="height: 1000px">
-        <div class="row" style="height: 1000px">
+            <div class="container-fluid">
+                <div class="row">
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -66,73 +61,15 @@
                             </a>
                         </li>
                     </ul>
-
-                    @*<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>Saved reports</span>
-                        <a class="d-flex align-items-center text-muted" href="#">
-                            <span data-feather="plus-circle"></span>
-                        </a>
-                    </h6>
-                    <ul class="nav flex-column mb-2">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
-                                Current month
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
-                                Last quarter
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
-                                Social engagement
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file-text"></span>
-                                Year-end sale
-                            </a>
-                        </li>
-                    </ul>*@
                 </div>
             </nav>
-            <main role="main" class="pt-xl-5">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pt-xl-5">
                 <div class="pl-xl-1">
                     @RenderBody()
                 </div>
             </main>
         </div>
-            <!--<div class="container">-->
-                @*<main role="main" class="pb-3">
-                    @RenderBody()
-                </main>*@
-            <!--</div>-->
         </div>
 </body>
 </html>
-@*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SkillCoacher</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>*@
-
 
