--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -6,11 +6,13 @@
     <title>@ViewData["Title"] - SkillCoacher</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/tagsinput.css" />
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <script src="~/lib/tagsinput.js"></script>
     <!-- Custom styles for this template -->
     <link href="~/lib/dashboard.css" rel="stylesheet">
     <link href="~/lib/blog.css" rel="stylesheet">
@@ -36,6 +38,20 @@
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/Submit">
+                                <span data-feather="home"></span>
+                                Опубликовать курс <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/Submit">
+                                <span data-feather="home"></span>
+                                Опубликовать курс <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="/Index">
                                 <span data-feather="home"></span>
