add tags and improve registration/authorization logic

--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     Профиль
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="/SignUp">Войти</a>
+                    <a class="dropdown-item" href="/LogIn">Войти</a>
                     <a class="dropdown-item" asp-area="" asp-page="/SignUp">Регистрация</a>
                 </div>
             </li>
