--- a/SkillCoacher/Pages/Index.cshtml
+++ b/SkillCoacher/Pages/Index.cshtml
@@ -20,6 +20,10 @@
                 <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
                 @*<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>*@
             </div>
+            @foreach(var tag in item.Tags)
+            {
+                <ul>@tag.Name</ul>
+            }
         </div>
     </div>
 }
