--- a/SkillCoacher/Pages/SignUp.cshtml
+++ b/SkillCoacher/Pages/SignUp.cshtml
@@ -28,7 +28,7 @@
     </form>
 </div>
 *@
-<form class="form-signin text-center">
+<form class="form-signin text-center" method="post">
     <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" asp-for="NewUser.Login" required autofocus>
