--- a/SkillCoacher/Pages/AddCourse.cshtml
+++ b/SkillCoacher/Pages/AddCourse.cshtml
@@ -2,34 +2,178 @@
 @model SkillCoacher.Pages.AddCourse
 @{
 }
-<script src="https://cdn.ckeditor.com/ckeditor5/30.0.0/classic/ckeditor.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="~/lib/dragndrop.css"></script>
+<script>
+    $(function () {
+        $("#sortable").sortable();
+        $("#sortable").disableSelection();
+    });
+</script>
 <div class="col-md-8 blog-main">
     <form method="post">
-    <h2 class="blog-post-title">Опубликовать курс</h2>
-    <hr />
-    <h4>Название курса</h4>
-    <input id="Name" type="text" />
-    <h4>Описание курса</h4>
-    <input id="Description" type="text" />
-    <h4>Содержание курса</h4>
-    <div id="editor">
-        <h2>faas</h2>
-    </div>
-    <script>
-        let editor;
-
-        ClassicEditor
-            .create(document.querySelector('#editor'))
-            .then(newEditor => {
-                editor = newEditor;
-            })
-            .catch(error => {
-                console.error(error);
-            });
-    </script>
-    <h4>Добавьте теги</h4>
+        <h2 class="blog-post-title">Опубликовать курс</h2>
+        <hr />
+        <h4>Название курса</h4>
+        <input id="Name" type="text" />
+        <h4>Описание курса</h4>
+        <input id="Description" type="text" />
+        <h4>Содержание курса</h4>
+        <div class="list list-row card" id="sortable" data-sortable-id="0" aria-dropeffect="move">
+            <div class="list-item" data-id="13" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false" style="">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-primary">P</span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Patrick Linod</a>
+                    <div class="item-except text-muted text-sm h-1x">For what reason would it be advisable for me to think about business content?</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">3 weeks ago</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="list-item" data-id="9" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-info"><img src="https://img.icons8.com/bubbles/24/000000/user.png" alt="."></span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Steven Hmpire</a>
+                    <div class="item-except text-muted text-sm h-1x">Build a progressive web app using jQuery</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">2 days ago</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="list-item" data-id="17" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false" style="">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-warning">A</span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Alan musk</a>
+                    <div class="item-except text-muted text-sm h-1x">it be advisable for me to think about business content?</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">13/12 18</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="list-item" data-id="8" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-success"><img src="https://img.icons8.com/doodle/24/000000/user-male.png" alt="."></span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Lawrence Telon</a>
+                    <div class="item-except text-muted text-sm h-1x">For what reason would it be advisable for me to think</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">02/11 18</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="list-item" data-id="10" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false" style="">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-danger"><img src="https://img.icons8.com/color/16/000000/administrator-male.png" alt="."></span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Stuart Clark</a>
+                    <div class="item-except text-muted text-sm h-1x">For what reason would, i think about business content?</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">1 day ago</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="list-item" data-id="3" data-item-sortable-id="0" draggable="true" role="option" aria-grabbed="false">
+                <div><a href="#" data-abc="true"><span class="w-40 avatar gd-primary"><img src="https://img.icons8.com/bubbles/16/000000/administrator-male.png" alt="."></span></a></div>
+                <div class="flex">
+                    <a href="#" class="item-author text-color" data-abc="true">Jordan Stephens</a>
+                    <div class="item-except text-muted text-sm h-1x">For what reason would it be advisable for me to think about business</div>
+                </div>
+                <div class="no-wrap">
+                    <div class="item-date text-muted text-sm d-none d-md-block">1 hour ago</div>
+                </div>
+                <div>
+                    <div class="item-action dropdown">
+                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                <circle cx="12" cy="12" r="1"></circle>
+                                <circle cx="12" cy="5" r="1"></circle>
+                                <circle cx="12" cy="19" r="1"></circle>
+                            </svg>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                            <a class="dropdown-item" href="#" data-abc="true">See detail </a><a class="dropdown-item download" data-abc="true">Download </a><a class="dropdown-item edit" data-abc="true">Edit</a>
+                            <div class="dropdown-divider"></div> <a class="dropdown-item trash" data-abc="true">Delete item</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4>Добавьте теги</h4>
         <input id="TagsInput" type="text" data-role="tagsinput" />
-     </form>
+    </form>
 </div>
     <hr />
     <div class="col-md-2 ml-md-auto">
