--- a/SkillCoacher/Pages/ChapterPage.cshtml
+++ b/SkillCoacher/Pages/ChapterPage.cshtml
@@ -6,10 +6,10 @@
 
 <div class="col-md-8 blog-main">
     <div class="blog-post">
-        <h2 class="blog-post-title">@Model.SelectedCourse.Name</h2>
+        <h2 class="blog-post-title">@Model.SelectedChapter.Name</h2>
         <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
         <hr>
-        <div>@Html.Raw(Model.SelectedCourse.Content)</div>
+        <div>@Html.Raw(Model.SelectedChapter.HtmlContent)</div>
         <hr>
         </div>
 </div>
