--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -80,6 +80,12 @@
                                 История
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page-handler="LogOut">
+                                <span data-feather="users"></span>
+                                Выйти
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
