--- a/SkillCoacher/Pages/Index.cshtml
+++ b/SkillCoacher/Pages/Index.cshtml
@@ -16,13 +16,23 @@
     {
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <div class="col p-4 d-flex flex-column position-static">
+                <div class="col p-4 d-flex flex-column position-static" id="@item.Id">
                     <strong class="d-inline-block mb-2 text-success">Design</strong>
                     <h3 class="mb-0">@item.Name</h3>
                     <div class="mb-1 text-muted">Nov 11</div>
                     <p class="mb-auto">@item.Description.</p>
-                    <a asp-page="/CoursePage" asp-route-Id="@item.Id" >Continue reading</a>
-                    <button onclick="AddToFavorite(@item.Id);">Подписаться</button>
+                    <a asp-page="/CoursePage" asp-route-Id="@item.Id">Continue reading</a>
+                    @if (Model.CurrentUser != null)
+                    {
+                        if (Model.CurrentUser.FavoriteCourses.Count(c => c.Id == item.Id) > 0)
+                        {
+                            <button id="subscribe" onclick="AddToFavorite(@item.Id);">Отписаться</button>
+                        }
+                        else
+                        {
+                            <button id="subscribe" onclick="AddToFavorite(@item.Id);">Подписаться</button>
+                        }
+                    }
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
@@ -37,7 +47,14 @@
     }
 </div>
 <script>
- function AddToFavorite($Id) {
+    function AddToFavorite($Id) {
+        let $button = $("#" + $Id + " > #subscribe");
+        console.log($button.text());
+        if ($button.text() == "Подписаться") {
+            $button.text("Отписаться");
+        } else {
+            $button.text("Подписаться");
+        }
         console.log("Entered method");
         $.ajax({
             type: "POST",
@@ -52,7 +69,7 @@
                     $('input:hidden[name="__RequestVerificationToken"]').val());
             },
             success() {
-
+                
             },
             dataType: "json"
         }).done(function (data) {
