--- a/SkillCoacher/Pages/Index.cshtml
+++ b/SkillCoacher/Pages/Index.cshtml
@@ -12,16 +12,17 @@
     <form method="post">
 
     </form>
+   
     @foreach (var item in Model.CoursesList)
     {
-        <div class="col-md-6">
+        <div class="col-md-6" id="courses">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static" id="@item.Id">
-                    <strong class="d-inline-block mb-2 text-success">Design</strong>
+                   
                     <h3 class="mb-0">@item.Name</h3>
                     <div class="mb-1 text-muted">Nov 11</div>
                     <p class="mb-auto">@item.Description.</p>
-                    <a asp-page="/CoursePage" asp-route-Id="@item.Id">Continue reading</a>
+                    <a asp-page="/CoursePage" asp-route-Id="@item.Id">Продолжить чтение</a>
                     @if (Model.CurrentUser != null)
                     {
                         if (Model.CurrentUser.FavoriteCourses.Count(c => c.Id == item.Id) > 0)
@@ -38,7 +39,7 @@
                     <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
                     @*<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>*@
                 </div>
-                @foreach (var tag in item.Tags)
+                @foreach (var tag in item?.Tags)
                 {
                     <ul>@tag.Name</ul>
                 }
@@ -46,6 +47,7 @@
         </div>
     }
 </div>
+    
 <script>
     function AddToFavorite($Id) {
         let $button = $("#" + $Id + " > #subscribe");
