--- a/SkillCoacher/Pages/SubmitCourse.cshtml
+++ b/SkillCoacher/Pages/SubmitCourse.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using System.Text
+@using System.Web
 @model SkillCoacher.Pages.SubmitCourseModel
 @{
 }
@@ -38,8 +40,8 @@
     <form method="post">
         <h2 class="blog-post-title">Опубликовать курс</h2>
         <hr />
-       
-        <input  type="hidden" asp-for="CurrentCourse.Id" />
+
+        <input type="hidden" asp-for="CurrentCourse.Id" />
         <h4>Название курса</h4>
         <input id="CurrentCourse_Name" type="text" asp-for="CurrentCourse.Name" />
         <h4>Описание курса</h4>
@@ -50,36 +52,35 @@
             {
 
                 var item = Model.CurrentCourse.Components[i];
-            <div id='@Model.CurrentCourse.Components[i].Id' class="list-item" data-id="@item.Sort"  data-item-sortable-id="@item.Sort" draggable="true" role="option" aria-grabbed="false" style="">
-                <input asp-for="CurrentCourse.Components[i].Id" type="hidden"></input>
-                <input asp-for="CurrentCourse.Components[i].Discriminator" type="hidden"></input>
-                <div class="flex">
-                    <input  asp-for="CurrentCourse.Components[i].Name" placeholder="@item.Name"></input>
-                </div>
-                <div class="no-wrap">
-                    <div class="item-date text-muted text-sm d-none d-md-block">3 weeks ago</div>
-                </div>
-                <div>
-                    <div class="item-action dropdown">
-                        <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
-                                <circle cx="12" cy="12" r="1"></circle>
-                                <circle cx="12" cy="5" r="1"></circle>
-                                <circle cx="12" cy="19" r="1"></circle>
-                            </svg>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
-                            <a  class="dropdown-item edit" asp-page="/SubmitChapter" asp-route-id="@Model.CurrentCourse.Components[i].Id" data-abc="true">Изменить</a>
-                            <div class="dropdown-divider"></div> <a  class="dropdown-item trash" onclick="DeleteAjax(@Model.CurrentCourse.Components[i].Id);" data-abc="true">Удалить</a>
+                <div id='@Model.CurrentCourse.Components[i].Id' class="list-item" data-id="@item.Sort" data-item-sortable-id="@item.Sort" draggable="true" role="option" aria-grabbed="false" style="">
+                    <input asp-for="CurrentCourse.Components[i].Id" type="hidden" />
+                    <input asp-for="CurrentCourse.Components[i].Discriminator" type="hidden" />
+                    <div class="flex">
+                        <input asp-for="CurrentCourse.Components[i].Name" placeholder="@item.Name" />
+                    </div>
+                    <div class="no-wrap">
+                        <div class="item-date text-muted text-sm d-none d-md-block">3 weeks ago</div>
+                    </div>
+                    <div>
+                        <div class="item-action dropdown">
+                            <a href="#" data-toggle="dropdown" class="text-muted" data-abc="true">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                                    <circle cx="12" cy="12" r="1"></circle>
+                                    <circle cx="12" cy="5" r="1"></circle>
+                                    <circle cx="12" cy="19" r="1"></circle>
+                                </svg>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right bg-black" role="menu">
+                                <a class="dropdown-item edit" asp-page="/SubmitChapter" asp-route-id="@Model.CurrentCourse.Components[i].Id" data-abc="true">Изменить</a>
+                                <div class="dropdown-divider"></div> <a class="dropdown-item trash" onclick="DeleteChapterAjax(@Model.CurrentCourse.Components[i].Id);" data-abc="true">Удалить</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             }
         </div>
         <h4>Добавьте теги</h4>
         <input id="TagsInput" type="text" data-role="tagsinput" />
-
         <div class="col-md-2 ml-md-auto">
             <button type="submit" id="addComp" class="btn btn-primary btn-lg" asp-page-handler="AddComponent" ;">Добавить раздел </button>
             <button type="button" class="btn btn-primary btn-lg" onclick="SaveChanges();">Сохранить</button>
@@ -88,19 +89,30 @@
 </div>
 <hr />
 
-
 <script type="text/javascript">
     $(document).ready(function () {
+        var tagsArray = [];
+        
+        @foreach(var tag in Model.CurrentCourse.Tags)
+            {
+              @:tagsArray.push("@Html.Raw(HttpUtility.JavaScriptStringEncode(String.Format(tag.Name, Encoding.UTF8)))");
+
+            }
+        tagsArray.forEach((tag) => {
+
+            $("#TagsInput").tagsinput("add", tag);
+            console.log(tag);
+        })
         if ($("#CurrentCourse_Id").val() == -1) {
             $(document).on("click", ".dropdown-item.trash, .dropdown-item.edit, #addComp", function (event) {
-            event.preventDefault();
-            alert("Сначала сохраните курс!");
-        });
+                event.preventDefault();
+                alert("Сначала сохраните курс!");
+            });
         }
     });
-    function DeleteAjax($deleteId) {
+    function DeleteChapterAjax($deleteId) {
         console.log("Entered method");
-       
+
 
         $.ajax({
             type: "POST",
@@ -122,33 +134,37 @@
         }).done(function (data) {
             console.log(data.result);
         })
-        $('#sortable > #'+ $deleteId).remove();
+        $('#sortable > #' + $deleteId).remove();
     };
 
     function SaveChanges() {
         console.log("Entered method");
         let $tags = $("#TagsInput").tagsinput('items');
+        if ($tags.length == 0) {
+            alert("Добавьте хотя бы один тег!");
+            return;
+        }
         let $content = new Array();
         $("#sortable > .list-item").each(function () {
             console.log($(this).children("input").eq(0).attr("id"));
             console.log($(this).children("input").eq(1).attr("id"));
             console.log($(this).find(".flex").find(":first-child").val());
 
-            $content.push( {
+            $content.push({
                 Id: $(this).children("input").eq(0).val(), Descriminator: $(this).children("input").eq(1).val(),
                 Name: $(this).find(".flex").find(":first-child").val(),
             });
         });
         let $CurrentCourse =
-            {
-                Id: $("#CurrentCourse_Id").val(),
-                Name: $("#CurrentCourse_Name").val(),
-                Description: $("#CurrentCourse_Description").val(),
-                Components: $content
-            }
+        {
+            Id: $("#CurrentCourse_Id").val(),
+            Name: $("#CurrentCourse_Name").val(),
+            Description: $("#CurrentCourse_Description").val(),
+            Components: $content
+        }
         $.ajax({
             type: "POST",
-            url: 'SubmitCourse?handler=SaveAjx',
+            url: 'SubmitCourse?handler=SaveChanges',
 
             data: {
                 CurrentCourse: $CurrentCourse,
@@ -159,10 +175,9 @@
                     $('input:hidden[name="__RequestVerificationToken"]').val());
             },
             success: function (data) {
-               // const $result = JSON.parse(data);
+                // const $result = JSON.parse(data);
                 if (data.isNew)
-                window.location.replace(document.documentURI + "?Id=" + data.id);
-
+                    window.location.replace(document.documentURI + "?Id=" + data.id);
             },
             dataType: "json"
         });
@@ -185,7 +200,7 @@
                 xhr.setRequestHeader("XSRF-TOKEN",
                     $('input:hidden[name="__RequestVerificationToken"]').val());
             },
-            
+
             dataType: "text"
         }).done(function (data) {
             console.log(data.result);
